@@ -18,6 +18,7 @@ Jython 2.7.3a1
     - [ GH-119 ] array.array itemsize and serialisation anomalies for unsigned types
     - [ GH-122 ] Upgrade Apache commons-compress to 1.21
     - [ GH-102 ] Fix CRC32.update calls in zlib.py
+    - [ GH-101 ] Improve boxing of arguments to vararg methods
     - [ GH-98 ] CVE-2019-9740: CRLF injection by url parameter
     - [ GH-97 ] Failures in SNI support affecting pip
     - [ GH-57 ] JavaWebStart compatibility broken
@@ -29,6 +30,10 @@ Jython 2.7.3a1
     - [ GH-2 ] Transfer closed-fixed issues in NEWS from frozen-mirror
 
   New Features
+
+    - Under PR GH-101, the matching of sequence arguments to the parameters of Java methods is
+      improved. A Java varargs parameter does not match a final sequence in the call
+      if an array parameter could do so. (Thanks Peter Holloway.)
 
     - array.array itemsize of unsigned types is now the same as their signed counterparts, where 
       previously it was mostly double. Internal representations have changed. Anomalies have been
